# elrond-sdk-erdcpp

./: .gitignore  CMakeLists.txt
include/: erdsdk.h
src/utils/: common.h
src/wrappers/: cryptosignwrapper.cpp  cryptosignwrapper.h  jsonrpcppwrapper.h
tests/: CMakeLists.txt
tests/test_walletconnect/: CMakeLists.txt  TestSessionManager.cpp  TestSessionManager.h  main.cpp
walletconnect/: CMakeLists.txt  ClientSession.cpp  ClientSession.h  SessionManager.cpp  SessionManager.h  main.cpp
walletconnect/entity/: ClientMeta.h  SocketMessage.h
walletconnect/session/: ClientSession.cpp  ClientSession.h  SessionManager.cpp  SessionManager.h
walletconnect/utils/: utils.h
walletconnect/websocket/: easywsclient.cpp  easywsclient.h
